CB-22781, CB-22785 - Validate the Private DNS Zone and Network Link
This commit contains the following:
 - user readable error message in case database engine is not specified
in a correct format
 - regex based validation for the Flexible Server desired Private DNS
Zone naming
 - validation for the Private DNS Zone existence
 - validation for the existence of the Private DNS Zone Network Link of the environment's network